--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    /* height: 100vh; */
+}
+.lists{
+     min-height: 65vh;
 }
 
 h1{
